--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
 
                     <div class="form-outline mb-4">
                       <label class="form-label" for="form2Example11">Email ID</label>
-                      <input required type="email" name="useremail" placeholder="example@gmail.com" class="form-control"
+                      <input required type="text" name="useremail" placeholder="example@gmail.com" class="form-control"
                         id="useremail" aria-describedby="emailHelp" />
 
                     </div>
