User edit access

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -30,6 +30,8 @@
 
 
 
+
+
     </style>
 
     <title>Dispensary Management System</title>
@@ -43,6 +45,17 @@
 
 
 <div class="min-h-screen bg-base-100 p-16 lg:p-32" style="background-image: url(static/bg2.jpg);">
+    <style>
+  h3 {
+    font-weight: bold;
+    color: red;
+    text-align: right;
+  }
+
+    </style>
+
+    <h3>{{ msg }}</h3>
+
     <div class="flex-col">
         <div class="form-control">
             <div class="flex-row gap-2 pl-4 pb-4 content-start">
